# Sentinel-Intelligence

./: .gitignore  API_CONTRACT.md  ARCHITECTURE.md  CLAUDE.md  FRONTEND_DECISIONS.md  HANDOVER.md  KNOWLEDGE_EXTRACTION.md  MONTE_CARLO_DECISIONS.md  README.md  STRESS_TEST_DECISIONS.md  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  Procfile  pyproject.toml  railway.json
backend/src/sentinel_api/: __init__.py  errors.py  limits.py  main.py
backend/src/sentinel_api/routers/: __init__.py  paper.py  portfolio.py  risk.py  simulation.py  stress.py
backend/src/sentinel_api/schemas/: __init__.py  common.py  paper.py  portfolio.py  risk.py  simulation.py  stress.py
backend/src/sentinel_core/: __init__.py  constants.py  errors.py
backend/src/sentinel_core/ai/: __init__.py  guardrails.py  llm_client.py  news.py  risk_adjustment.py
backend/src/sentinel_core/data/: __init__.py  loader.py
backend/src/sentinel_core/education/: __init__.py  ampel.py  explanations.py
backend/src/sentinel_core/paper/: __init__.py  engine.py  ledger.py  valuation.py
backend/src/sentinel_core/portfolio/: __init__.py  optimization.py  upload.py
backend/src/sentinel_core/risk/: __init__.py  contribution.py  metrics.py  scoring.py  var.py
backend/src/sentinel_core/simulation/: __init__.py  monte_carlo.py
backend/src/sentinel_core/stress/: __init__.py  replay.py
backend/tests/: test_ai.py  test_ampel.py  test_api_paper.py  test_api_portfolio.py  test_api_risk.py  test_api_security.py  test_api_simulation.py  test_api_stress.py  test_contribution.py  test_loader.py  test_optimization.py  test_paper.py  test_risk_metrics.py  test_simulation.py  test_skeleton.py  test_stress.py  test_upload.py  test_var_scoring.py
frontend/: .env.local.example  package-lock.json  package.json
frontend/app/: layout.tsx  manifest.ts  page.tsx  providers.tsx
frontend/app/(learn)/: layout.tsx
frontend/components/: Disclaimer.tsx  ErrorNotice.tsx  Nav.tsx  Skeleton.tsx
frontend/lib/: DepotProvider.tsx  api.ts  depot-storage.ts  limits.ts  popular-tickers.ts  portfolio.ts  types.ts  usePaperDepot.ts
(+14 files in other folders)
