[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-backend"
version = "0.1.0"
description = "Sentinel backend: sentinel_core (domain logic) + sentinel_api (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    # Price data source per ARCHITECTURE.md §2; pandas is used directly
    # by sentinel_core (returns/covariance work on DataFrames).
    "pandas>=2.0",
    "yfinance>=0.2",
    # First consumer-shared scientific dependency: SLSQP for the
    # max-Sharpe optimizer (KNOWLEDGE_EXTRACTION §11) and norm.pdf/ppf
    # for the parametric CVaR (§4).
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "black>=24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Don't rely on the editable install's .pth: Python 3.13 skips .pth files
# carrying the macOS hidden flag, which a local tool sets on everything
# under dot-directories like .venv (same lesson as legacy CI, §15).
pythonpath = ["src"]
